[tool.poetry]
name = "fatld"
version = "0.1.0"
description = "Generate and characterize designs with four-and-two-level (FATL) factors"
authors = ["ABohynDOE <alexandre.bohyn@kuleuven.be>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
oapackage = "^2.7.6"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
ruff = "^0.0.244"
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
