[tool.poetry]
name = "fatld"
version = "0.1.0"
description = "Generate and characterize designs with four-and-two-level (FATL) factors"
authors = ["ABohynDOE <alexandre.bohyn@kuleuven.be>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
oapackage = "^2.7.6"
matplotlib = "^3.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
ruff = "^0.0.244"
coverage = "^7.1.0"
ipykernel = "^6.21.2"
mypy = "^1.0.0"
pre-commit = "^3.0.4"


[tool.poetry.group.docs.dependencies]
furo = "^2022.12.7"
sphinxcontrib-bibtex = "^2.5.0"
sphinx-copybutton = "0.5.0"
sphinx = "5.3.0"
myst-parser = "^0.18.1"

[build-system]
requires = ["setuptools", "poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
