[tool.poetry]
name = "fatld"
version = "0.1.9"
description = "Generate and characterize designs with four-and-two-level (FATL) factors"
authors = ["Alexandre Bohyn <alexandre.bohyn@kuleuven.be>"]
readme = "README.md"
license = "MIT"
homepage = "https://abohyndoe.github.io/fatld/"
repository = "https://github.com/ABohynDOE/fatld"
keywords = ["design", "doe"]
classifiers = [
	"Programming Language :: Python :: 3.8",
	"Development Status :: 3 - Alpha"
]


[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
oapackage = "^2.7.6"
matplotlib = "^3.6.3"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
ruff = "^0.0.244"
coverage = "^7.1.0"
ipykernel = "^6.21.2"
mypy = "^1.0.0"
pre-commit = "^3.0.4"


[tool.poetry.group.docs.dependencies]
furo = "^2022.12.7"
sphinxcontrib-bibtex = "^2.5.0"
sphinx-copybutton = "0.5.0"
sphinx = "5.3.0"
myst-parser = "^0.18.1"

[build-system]
requires = ["setuptools", "poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
